--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:MyCoursach"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Opacity="0.9">
-    <Grid OpacityMask="#FFB05353" Visibility="Collapsed">
-        
+   
+
+    <Grid>
+        <Button Content="lalal" Margin="50"/>
     </Grid>
 </Window>
