--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,8 @@
         Title="MainWindow" Height="450" Width="800" Opacity="0.9">
    
 
-    <Grid>
+    <Grid Background ="Blue">
         <Button Content="lalal" Margin="50"/>
+      <Button Content="l12321312alal" Margin="50"/>
     </Grid>
 </Window>
